--- a/C10 MARKDOWN FILE.Rmd
+++ b/C10 MARKDOWN FILE.Rmd
@@ -9,7 +9,7 @@ output:
 
 Hello. This RMarkdown document will compile all codes used into one singular document, reproducible from scratch.
 
-# **Cleaning & Compiling Data (by Mae)**
+# **Cleaning & Compiling Data - Mae**
 
 Before any analysis was possible, the data needed to be organised, cleaned, merged and compiled. Here is the code that made this possible.
 
@@ -648,49 +648,43 @@ library(ggpubr)
 p_box_all_pre <- ggplot(data = filter(continent_growth, year <= 2014), aes(continent, cont_avg_gdp_growth)) + 
   geom_boxplot() + 
   labs(title = "Box Plot for Continents Including All Countries", subtitle = "Pre-2015", x = "", y = "Average GDP per Capita Growth (%)")
-p_box_all_pre
 
 p_box_all_post <- ggplot(data = filter(continent_growth, year >= 2015), aes(continent, cont_avg_gdp_growth)) + 
   geom_boxplot() + 
   labs(subtitle = "Post-2015", x = "", y = "", caption = "Source: World Bank")
-p_box_all_post
 
 p_box_all <- ggarrange(p_box_all_pre, p_box_all_post, ncol=1, nrow = 2)
-
 
 
 
 p_box_ldc_pre <- ggplot(data = filter(continent_ldc_growth, year <= 2014), aes(continent, cont_avg_gdp_growth)) + 
   geom_boxplot() + 
   labs(title = "Box Plot for Continents Including LDCs", subtitle = "Pre-2015", x = "", y = "Average GDP per Capita Growth (%)")
-p_box_ldc_pre
 
 p_box_ldc_post <- ggplot(data = filter(continent_ldc_growth, year >= 2015), aes(continent, cont_avg_gdp_growth)) + 
   geom_boxplot() + 
   labs(subtitle = "Post-2015", x = "", y = "", caption = "Source: World Bank")
-p_box_ldc_post
 
 p_box_ldc <- ggarrange(p_box_ldc_pre, p_box_ldc_post, ncol=1, nrow = 2)
 
 
 
-p_box_noldc_pre <- ggplot(data = filter(continent_noldc_growth, year <= 2014), aes(continent, cont_avg_gdp_growth)) +
+p_box_noldc_pre <- ggplot(data = filter(continent_noldc_growth, year <= 2014), aes(continent, cont_avg_gdp_growth)) + 
   geom_boxplot() + 
-  labs(title = "Box Plot for Continents Including All Countries", subtitle = "Pre-2015", x = "", y = "Average GDP per Capita Growth (%)")
-p_box_noldc_pre
+  labs(title = "Box Plot for Continents Including Non-LDCs", subtitle = "Pre-2015", x = "", y = "Average GDP per Capita Growth (%)")
 
 p_box_noldc_post <- ggplot(data = filter(continent_noldc_growth, year >= 2015), aes(continent, cont_avg_gdp_growth)) + 
   geom_boxplot() + 
   labs(subtitle = "Post-2015", x = "", y = "", caption = "Source: World Bank")
-p_box_noldc_post
 
 p_box_noldc <- ggarrange(p_box_noldc_pre, p_box_noldc_post, ncol=1, nrow = 2)
+
 
 ```
 
 That is all the code for question one. Let us now consider question two.
 
-# ***QUESTION TWO - Elisa and Fiona***
+# ***QUESTION TWO - Elisa & Fiona***
 
 Here is the code used in creating the graphs and data used in Question Two, courtesy of Elisa and Fiona.
 
